网络代码调整

--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -114,7 +114,6 @@ D6CXuV=Change {} language from [{}] to [{}]?
 A_zTdU=Change network in {} seconds: {} (interface {}). Please be ready to reconnect. Press Ctrl+C to cancel
 # ◆=config_nmcli
 AmqOYu=nmcli is not installed or unavailable. Please install it and try again
-AAVRlb=Failed to restart NetworkManager. Please check and try again
 # ◆=comment_ifupdown
 A7mROg=comment {} for {}
 # ◆=setup_systemd_networkd
@@ -123,6 +122,8 @@ B96uwR=change config file {}
 DR9Q62=systemd-networkd is not installed or unavailable
 Chdsa8=Failed to restart systemd-networkd. Please check and try again
 # ◆=network_config
+DXOXA_=[{}] Network switched. Log: {}
+Co-uGi=[{}] Failed to switch network. Log: {}
 C1n7FE=NetworkManager is running (systemctl status NetworkManager)
 DSEEUY=ifupdown is running (systemctl status networking)
 DdVMc5=wicked is running (systemctl status wicked)
@@ -320,6 +321,7 @@ A2bCmM=\nOperation cancelled
 B41yVK={} Cloud servers do not require a static IP
 CYYp0S=Server is configured with a static IP
 D6UA5B=Server may be configured with a static IP
+Cp93zR=Server is configured with a dynamic IP
 AzA-3k=Server may be configured with a dynamic IP
 CCY-S1=Would you like to adjust it?
 C2TtcR=Do not modify the network configuration
