--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -114,7 +114,6 @@ D6CXuV=Change {} language from [{}] to [{}]?
 A_zTdU={}秒后修改网络配置：{} (接口 {})，请准备好重连。按 Ctrl+C 取消
 # ◆=config_nmcli
 AmqOYu=nmcli未安装或不可用，请先安装后再试
-AAVRlb=NetworkManager 重启失败，请检查后再试
 # ◆=comment_ifupdown
 A7mROg={} 中注释 {}
 # ◆=setup_systemd_networkd
@@ -123,6 +122,8 @@ B96uwR=修改配置文件 {}
 DR9Q62=systemd-networkd 未安装或不可用
 Chdsa8=systemd-networkd 重启失败，请检查后再试
 # ◆=network_config
+DXOXA_=[{}] 网络已切换，日志: {}
+Co-uGi=[{}] 网络切换失败，日志: {}
 C1n7FE=NetworkManager 正在运行 (systemctl status NetworkManager)
 DSEEUY=ifupdown 正在运行 (systemctl status networking)
 DdVMc5=wicked 正在运行 (systemctl status wicked)
@@ -320,6 +321,7 @@ A2bCmM=\n操作已取消
 B41yVK={} 云服务器无需设置固定IP
 CYYp0S=服务器已配置静态IP
 D6UA5B=服务器可能已配置静态IP
+Cp93zR=服务器已配置动态IP
 AzA-3k=服务器可能已配置动态IP
 CCY-S1=是否需要调整IP?
 C2TtcR=不修改网络配置
