增加user_permit和REAL_USER变量，调整sudo逻辑

--- a/config/lang/.de.properties
+++ b/config/lang/.de.properties
@@ -1,6 +1,6 @@
 # global parameter
 # initialize
-INIT_SUDO_NO_EXIST="Bitte führen Sie dieses Skript als root (su -) aus oder installieren Sie sudo manuell"
+INIT_SUDO_RUN="Dieses Skript muss mit sudo ausgeführt werden. Erneutes Ausführen mit sudo..."
 INIT_SHELL_LANG="Skriptsprache initialisieren (Standard={}): "
 INIT_SYSTEM_START="Systemstart initialisieren"
 INIT_SYSTEM_END="Systemende initialisieren"
