--- a/config/lang/.en.properties
+++ b/config/lang/.en.properties
@@ -1,6 +1,6 @@
 # global parameter
 # initialize
-INIT_SUDO_NO_EXIST="Please run this script as root (su -) or manually install sudo"
+INIT_SUDO_RUN="This script must be run with sudo. Re-running with sudo..."
 INIT_SHELL_LANG="Initialize script language (default={}): "
 INIT_SYSTEM_START="Initialize system start"
 INIT_SYSTEM_END="Initialize system end"
