--- a/config/lang/.es.properties
+++ b/config/lang/.es.properties
@@ -1,6 +1,6 @@
 # global parameter
 # initialize
-INIT_SUDO_NO_EXIST="Por favor, ejecute este script como root (su -) o instale sudo manualmente"
+INIT_SUDO_RUN="Este script debe ejecutarse con sudo. Volviendo a ejecutarlo con sudo..."
 INIT_SHELL_LANG="Inicializar el idioma del script (predeterminado={}): "
 INIT_SYSTEM_START="Iniciar el sistema"
 INIT_SYSTEM_END="Finalizar el sistema"
