--- a/config/lang/.fr.properties
+++ b/config/lang/.fr.properties
@@ -1,6 +1,6 @@
 # global parameter
 # initialize
-INIT_SUDO_NO_EXIST="Veuillez exécuter ce script en tant que root (su -) ou installer sudo manuellement"
+INIT_SUDO_RUN="Ce script doit être exécuté avec sudo. Réexécution avec sudo..."
 INIT_SHELL_LANG="Initialiser la langue du script (par défaut={}): "
 INIT_SYSTEM_START="Initialiser le démarrage du système"
 INIT_SYSTEM_END="Initialiser la fin du système"
