--- a/config/lang/.ja.properties
+++ b/config/lang/.ja.properties
@@ -1,6 +1,6 @@
 # global parameter
 # initialize
-INIT_SUDO_NO_EXIST="このスクリプトを root (su -) として実行するか、sudo を手動でインストールしてください"
+INIT_SUDO_RUN="このスクリプトはsudoで実行する必要があります。sudoで再実行しています..."
 INIT_SHELL_LANG="スクリプト言語を初期化 (デフォルト={}): "
 INIT_SYSTEM_START="システムの開始を初期化"
 INIT_SYSTEM_END="システムの終了を初期化"
