--- a/config/lang/.ko.properties
+++ b/config/lang/.ko.properties
@@ -1,6 +1,6 @@
 # global parameter
 # initialize
-INIT_SUDO_NO_EXIST="이 스크립트를 root (su -)로 실행하거나 sudo를 수동으로 설치하세요"
+INIT_SUDO_RUN="이 스크립트는 sudo로 실행해야 합니다. sudo로 다시 실행 중..."
 INIT_SHELL_LANG="스크립트 언어 초기화 (기본값={}): "
 INIT_SYSTEM_START="시스템 시작 초기화"
 INIT_SYSTEM_END="시스템 종료 초기화"
