--- a/config/lang/.zh.properties
+++ b/config/lang/.zh.properties
@@ -1,6 +1,6 @@
 # global parameter
 # initialize
-INIT_SUDO_NO_EXIST="请使用 root 账号执行本脚本(su -)，或手动安装 sudo"
+INIT_SUDO_RUN="此脚本必须使用 sudo 运行。正在使用 sudo 重新运行..."
 INIT_SHELL_LANG="初始化脚本语言(默认={}): "
 INIT_SYSTEM_START="初始化系统启动"
 INIT_SYSTEM_END="初始化系统结束"
