--- a/config/lang/.zh_TW.properties
+++ b/config/lang/.zh_TW.properties
@@ -1,6 +1,6 @@
 # global parameter
 # initialize
-INIT_SUDO_NO_EXIST="請使用 root 帳號執行本腳本(su -)，或手動安裝 sudo"
+INIT_SUDO_RUN="此腳本必須使用 sudo 執行。正在使用 sudo 重新執行..."
 INIT_SHELL_LANG="初始化脚本語言(預設={}): "
 INIT_SYSTEM_START="初始化系統啟動"
 INIT_SYSTEM_END="初始化系統結束"
