user_file_permit函数处理权限; 其他函数名称调整; require_sudo代码优化; 去掉SUDO_CMD; 设置REAL_USER代替USER、REAL_HOME代替HOME

--- a/config/lang/.fr.properties
+++ b/config/lang/.fr.properties
@@ -2,6 +2,9 @@
 # initialize
 INIT_SUDO_RUN="Ce script doit être exécuté avec sudo. Réexécution avec sudo..."
 INIT_SHELL_LANG="Initialiser la langue du script (par défaut={}): "
+INIT_SHELL_LANG_FOMAT_ERROR="Formato de idioma no válido. Por favor, inténtalo de nuevo (ej.: fr_FR | fr_FR.UTF-8)"
+INIT_SHELL_LANG_NOT_IN_LIST="No está en la lista de locales. Por favor, inténtalo de nuevo (verifica con [ locale -a ])"
+INIT_SHELL_LANG_CHANGE="Cambiar el idioma del script de [{}] a [{}]?"
 INIT_SYSTEM_START="Initialiser le démarrage du système"
 INIT_SYSTEM_END="Initialiser la fin du système"
 INIT_LINUX_UNSUPPORT="Distribution Linux non prise en charge"
