--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -50,7 +50,9 @@ A1bqoY=语言文件更新完成
 D6sy7g=请输入语言参数，如 --lang={0}
 
 # ■=bin/init_main.sh
-# ◆=config_sshd
+# ◆=initial_global
+DAOaEc=set LANG to {}
+# ◆=configure_sshd
 Dj3cJb=sshd is not installed, installing now...
 BLGrby=SSH configuration has been applied
 Dq9sXa=systemctl restart {} failed, please execute manually
@@ -89,6 +91,8 @@ DeH9WO={} installation successful
 # ◆=monitor_progress
 ATkIIM=Monitoring process {}...
 APOzfr=Completed
+# ◆=user_file_permit
+BHeYRA={} ownership changed to {}
 
 # ■=lib/docker.sh
 # ◆=show_notice
@@ -99,15 +103,6 @@ Cb5gv1=⏎ 选择完成，正在保存配置到 .env 文件...
 # ■=lib/json_handler.sh
 # ◆=fetch_options
 BzOdCD=JSON format error
-
-# ■=lib/lang_utils.sh
-# ◆=normalize_locale
-A9ftw-=Invalid language format. Please re-enter (e.g., en_US | en_US.UTF-8)
-B8NX--=Not in the locale list. Please re-enter (check [ locale -a ])
-# ◆=reset_language
-Bi83a8=Set shell language (Default = {}):
-# ◆=reset_user_locale
-D6CXuV=Change {} language from [{}] to [{}]?
 
 # ■=lib/network.sh
 # ◆=count_down
@@ -217,10 +212,10 @@ DE4sbC=Installation of {} completed
 # ■=python/config_sshd.py
 # ◆=run_command
 DWA16R=Failed to execute command: {}
-# ◆=config_sshd
+# ◆=configure_sshd
 D6wN7B=SSH configuration file {} does not exist
-DPfimc=Root login allowed
-BQqoTt=Root login disabled
+DqyvG8=root login allowed
+DVkFEN=root login disabled
 AZKZT4=Current SSH is running on Port {}, {}
 BNOqlk=Would you like to reconfigure it?
 DzCitM=Enter new SSH port (current: {}):
