--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -50,7 +50,9 @@ A1bqoY=语言文件更新完成
 D6sy7g=请输入语言参数，如 --lang={0}
 
 # ■=bin/init_main.sh
-# ◆=config_sshd
+# ◆=initial_global
+DAOaEc=设置语言为 {}
+# ◆=configure_sshd
 Dj3cJb=sshd 未安装，正在安装...
 BLGrby=SSH 配置已生效
 Dq9sXa=systemctl restart {} 失败，请手动执行
@@ -89,6 +91,8 @@ DeH9WO={} 安装成功
 # ◆=monitor_progress
 ATkIIM=监控进程 {}...
 APOzfr=完成
+# ◆=user_file_permit
+BHeYRA={} 所有权改为 {}
 
 # ■=lib/docker.sh
 # ◆=show_notice
@@ -99,15 +103,6 @@ Cb5gv1=⏎ 选择完成，正在保存配置到 .env 文件...
 # ■=lib/json_handler.sh
 # ◆=fetch_options
 BzOdCD=JSON format error
-
-# ■=lib/lang_utils.sh
-# ◆=normalize_locale
-A9ftw-=Invalid language format. Please re-enter (e.g., en_US | en_US.UTF-8)
-B8NX--=Not in the locale list. Please re-enter (check [ locale -a ])
-# ◆=reset_language
-Bi83a8=Set shell language (Default = {}):
-# ◆=reset_user_locale
-D6CXuV=Change {} language from [{}] to [{}]?
 
 # ■=lib/network.sh
 # ◆=count_down
@@ -216,18 +211,18 @@ DE4sbC=安装{}完成
 
 # ■=python/config_sshd.py
 # ◆=run_command
-DWA16R=执行命令失败: {}
-# ◆=config_sshd
-D6wN7B=SSH配置文件 {} 不存在
-DPfimc=允许 root 登录
-BQqoTt=禁止 root 登录
-AZKZT4=当前 SSH 运行在 {} 端口, {}
-BNOqlk=是否需要重新设置?
-DzCitM=输入新的SSH端口 (当前: {}):
-AcZ5l2=设置SSH端口
-ARXwDI=设置SSH端口失败
+DWA16R=命令执行失败: {}
+# ◆=configure_sshd
+D6wN7B=SSH 配置文件 {} 不存在
+DqyvG8=允许 root 登录
+DVkFEN=禁止 root 登录
+AZKZT4=当前 SSH 运行在端口 {}，{}
+BNOqlk=否需要重新配置?
+DzCitM=请输入新的 SSH 端口 (当前: {}):
+AcZ5l2=SSH 端口已设置为
+ARXwDI=设置 SSH 端口失败
 A2bCmM=\n操作已取消
-D6jDYn=允许 root 远程登录?
+D6jDYn=允许 root 通过 SSH 登录?
 
 # ■=python/file_util.py
 # ◆=copy_file
