彻底清理SUDO; user_file_permit增加.venv和.local; 其他代码微调

--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -109,9 +109,7 @@ BzOdCD=JSON format error
 A_zTdU=Change network in {} seconds: {} (interface {}). Please be ready to reconnect. Press Ctrl+C to cancel
 # ◆=config_nmcli
 AmqOYu=nmcli is not installed or unavailable. Please install it and try again
-# ◆=comment_ifupdown
-A7mROg=comment {} for {}
-# ◆=config_default
+# ◆=config_systemd_networkd
 DR9Q62=systemd-networkd is not installed or unavailable
 # ◆=network_config
 DXOXA_=[{}] Network switched. Log: {}
