--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -109,9 +109,7 @@ BzOdCD=JSON format error
 A_zTdU={}秒后修改网络配置：{} (接口 {})，请准备好重连。按 Ctrl+C 取消
 # ◆=config_nmcli
 AmqOYu=nmcli未安装或不可用，请先安装后再试
-# ◆=comment_ifupdown
-A7mROg={} 中注释 {}
-# ◆=config_default
+# ◆=config_systemd_networkd
 DR9Q62=systemd-networkd 未安装或不可用
 # ◆=network_config
 DXOXA_=[{}] 网络已切换，日志: {}
