--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -75,15 +75,18 @@ A1bqoY=语言文件更新完成
 D6sy7g=请输入语言参数，如 --lang={0}
 
 # ■=bin/init_main.sh
-# ◆=config_sshd
-# ●=info@153
+# ◆=initial_global
+# ●=string@109
+DAOaEc=set LANG to {}
+# ◆=configure_sshd
+# ●=info@143
 Dj3cJb=sshd is not installed, installing now...
-# ●=info@172
+# ●=info@158
 BLGrby=SSH configuration has been applied
-# ●=warning@174
+# ●=warning@160
 Dq9sXa=systemctl restart {} failed, please execute manually
 # ◆=install_docker
-# ●=info@197
+# ●=info@177
 BMptZs=在 {} 上安装 Docker 与 Docker Compose...
 
 # ■=bin/test_lang.sh
@@ -113,40 +116,28 @@ Aw3y8l={0} 语言文件已创建
 
 # ■=lib/bash_utils.sh
 # ◆=do_keyboard_interrupt
-# ●=exiterr@68
+# ●=exiterr@57
 Ai7UlQ=operation is cancelled
 # ◆=confirm_action
-# ●=error@78
+# ●=error@67
 Cq88WR=Please enter 'y' for yes, 'n' for no, or press Enter for default
-# ◆=file_backup_sj
-# ●=exiterr@124
-A-g65z=未指定需要备份的文件
-# ●=warning@135
-D7A4Jy=警告：未找到匹配 '$pattern' 的文件
-# ●=warning@147
-BDbdpK=备份文件 $backup_file 已存在，跳过
-# ●=info@154
-CPJo9U=已创建备份: $src_file -> $backup_file
-# ●=error@157
-CNpapj=错误：无法创建备份文件 $backup_file
-# ●=exiterr@165
-DvpZ6Q=重要文件无法备份
-# ●=info@167
-ACMBwV=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败 $error_count 个
 
 # ■=lib/cmd_handler.sh
 # ◆=install_base_pkg
-# ●=info@18
+# ●=string@39
 DtZJ4v=Automatically installing {} ...
-# ●=exiterr@33
+# ●=success@47
+DeH9WO={} installation successful
+# ●=exiterr@52
 Ar7Pu3={} installation failed, please install manually. Log: {} [{}]
-# ●=success@35
-Bg2ZYl={} installation successful, Log: {} [{}]
 # ◆=monitor_progress
-# ●=string@157
+# ●=string@111
 ATkIIM=Monitoring process {}...
-# ●=_mf@185
+# ●=_mf@143
 APOzfr=Completed
+# ◆=user_file_permit
+# ●=string@191
+BHeYRA={} ownership changed to {}
 
 # ■=lib/docker.sh
 # ◆=show_notice
@@ -161,161 +152,147 @@ Cb5gv1=⏎ 选择完成，正在保存配置到 .env 文件...
 # ●=exiterr@40
 BzOdCD=JSON format error
 
-# ■=lib/lang_utils.sh
-# ◆=normalize_locale
-# ●=string@80
-A9ftw-=Invalid language format. Please re-enter (e.g., en_US | en_US.UTF-8)
-# ●=string@91
-B8NX--=Not in the locale list. Please re-enter (check [ locale -a ])
-# ◆=reset_language
-# ●=_mf@115
-Bi83a8=Set shell language (Default = {}): 
-# ◆=reset_user_locale
-# ●=_mf@212
-D6CXuV=Change {} language from [{}] to [{}]?
-
 # ■=lib/network.sh
 # ◆=count_down
-# ●=info@34
+# ●=info@37
 A_zTdU=Change network in {} seconds: {} (interface {}). Please be ready to reconnect. Press Ctrl+C to cancel
 # ◆=config_nmcli
-# ●=exiterr@48
+# ●=exiterr@54
 AmqOYu=nmcli is not installed or unavailable. Please install it and try again
-# ●=exiterr@74
-AAVRlb=Failed to restart NetworkManager. Please check and try again
-# ◆=comment_ifupdown
-# ●=info@92
-A7mROg=comment {} for {}
-# ◆=setup_systemd_networkd
-# ●=string@128
-B96uwR=change config file {}
-# ◆=config_default
-# ●=exiterr@178
+# ◆=config_systemd_networkd
+# ●=exiterr@189
 DR9Q62=systemd-networkd is not installed or unavailable
-# ●=exiterr@186
-Chdsa8=Failed to restart systemd-networkd. Please check and try again
 # ◆=network_config
-# ●=string@196
+# ●=_mf@258
+DXOXA_=[{}] Network switched. Log: {}
+# ●=_mf@259
+Co-uGi=[{}] Failed to switch network. Log: {}
+# ●=string@261
 C1n7FE=NetworkManager is running (systemctl status NetworkManager)
-# ●=string@199
+# ●=string@264
 DSEEUY=ifupdown is running (systemctl status networking)
-# ●=string@202
+# ●=string@267
 DdVMc5=wicked is running (systemctl status wicked)
-# ●=string@205
+# ●=string@270
 CbKEUc=network-scripts is running (systemctl status network)
-# ●=string@209
+# ●=string@274
 DUEmDt=systemd-networkd is running (systemctl status systemd-networkd)
-# ●=exiterr@212
+# ●=exiterr@277
 AVcfZk=Unknown network manager. Unable to configure static IP
+
+# ■=lib/python_bridge.sh
+# ◆=sh_clear_cache
+# ●=exiterr@40
+BSEB2I=Python executable file {} does not exist
 
 # ■=lib/python_install.sh
 # ◆=detect_system
-# ●=exiterr@51
+# ●=exiterr@53
 AM9k6I=Unsupported architecture: {}
 # ◆=get_python_url
-# ●=exiterr@69
+# ●=exiterr@71
 BlWk8P=Unsupported system type: {}
 # ◆=on_exit
-# ●=warning@108
+# ●=warning@106
 DAV8e8=Interrupt detected, terminating background download process (PID={}...)
 # ◆=smart_geturl
-# ●=error@80
-CcZPFX=Usage: smart_geturl <output_file> <URL>
-# ●=error@91
-CxZTTU=Neither wget nor curl is installed on the system, unable to download.
-# ●=_mf@96
-DLuT5a=Starting download
-# ●=_mf@97
+# ●=_mf@81
+D6WY5X=Web resource
+# ●=_mf@82
+Bgl2oO=Output path
+# ●=_mf@83
+B1HWyp=File size
+# ●=_mf@84
 CKMRMM=Start time
-# ●=_mf@182
+# ●=error@90
+CxZTTU=Neither wget nor curl is installed on the system, unable to download.
+# ●=_mf@180
 AOGJnE=Size
-# ●=_mf@182
+# ●=_mf@180
 DnoT0H=Average
-# ●=_mf@185
+# ●=_mf@183
 Dj_fn5=Waiting for file creation...
-# ●=_mf@190
+# ●=_mf@188
 CxdIB-=Elapsed Time
-# ●=string@217
+# ●=warning@194
+AmC3ey=If your network is slow, please download or install Python 3.10+ manually
+# ●=string@223
 C3TQx_=[{}] Download complete! File size: {}
-# ●=string@219
+# ●=string@225
 DJ9mym=[{}] Download failed
 # ◆=install_py_standalone
-# ●=info@230
+# ●=info@236
 Cr3-oJ=Downloading Python {} standalone...
-# ●=info@235
+# ●=info@244
 DnuwZu=Installing Python to {}...
-# ●=exiterr@238
+# ●=exiterr@247
 B62oO-=Extraction and installation failed
-# ◆=install_py_bin
-# ●=info@255
-D6gi9o=Python {} installation completed!
-# ●=exiterr@258
+# ●=exiterr@255
 DfZCnc=Python {} installation failed: {} does not exist or is not executable
+# ●=info@257
+D6gi9n=Python {} installation completed
 # ◆=install_py_venv
-# ●=_mf@267
+# ●=_mf@266
 Djzzvr=Virtual environment {} already exists. Delete and reinstall it?
-# ●=_mf@273
+# ●=_mf@272
 C_9sLZ=Current pip mirror:
-# ●=_mf@275
-BJVBQG={}Reinstall pip and the required Python libraries?
 # ●=_mf@276
+BJVBQG={}Reinstall pip and the required Python libraries?
+# ●=_mf@277
 AoE5L8=Skipping virtual environment creation
-# ●=info@279
+# ●=info@280
 6bcebee3496f45cc552aa606f8112a2d=Deleting virtual environment {}...
-# ●=info@288
+# ●=info@299
 96f72e8313838714d9e659fde4fd343c=Creating virtual environment {}...
-# ●=success@290
+# ●=success@301
 DC8V8Z=Virtual environment created successfully
-# ●=exiterr@293
+# ●=exiterr@304
 DqRJ9Y=Failed to create virtual environment
 # ◆=upgrade_pip
-# ●=_mf@309
+# ●=_mf@320
 D6vb-V=upgrade success
-# ●=_mf@311
+# ●=_mf@322
 AGg8Fk=upgrade failure
 # ◆=install_packages
-# ●=_mf@328
+# ●=_mf@339
 DOoYYE=install success
-# ●=_mf@330
+# ●=_mf@341
 DaZ4fT=install failure
 # ◆=show_pip_mirrors
-# ●=_mf@362
+# ●=_mf@373
 C6JrUi=Index
-# ●=_mf@362
+# ●=_mf@373
 B5VRns=Mirror Name
-# ●=_mf@362
+# ●=_mf@373
 AT1vWp=URL Address
-# ●=_mf@362
+# ●=_mf@373
 AOKnr4=Time
-# ●=_mf@376
+# ●=_mf@387
 BrbGjI=Fastest Mirror
-# ●=_mf@378
+# ●=_mf@389
 BMhBIw=Response Time
-# ●=_mf@384
+# ●=_mf@395
 BclW-G=Failed Mirrors
-# ●=_mf@396
+# ●=_mf@407
 AOlJ5P=Status
 # ◆=choose_pip_mirror
-# ●=warning@423
+# ●=warning@433
 D1ECQh=No available mirrors found. Please check your network connection.
-# ●=_mf@428
+# ●=_mf@438
 CIq9J2=Please select a mirror to use. Enter 0 to skip
-# ●=string@432
+# ●=string@442
 Dz9vrd=Configuration canceled. Keeping current settings
-# ●=_mf@459
+# ●=_mf@469
 B4r_eA=Pip has been configured to use the new mirror
-# ●=_mf@460
+# ●=_mf@470
 AoQOEG=Mirror
-# ●=_mf@461
+# ●=_mf@471
 Bovsx6=Trusted Host
-# ●=string@467
+# ●=string@477
 CIsYrg=[{}] Invalid input! Please enter a number between 0 and {}
 # ◆=create_py_venv
-# ●=_mf@481
+# ●=_mf@496
 DLX7Eq=Testing global pip mirror speeds...
-# ◆=main
-# ●=info@512
-DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
 
 # ■=python/cmd_handler.py
 # ◆=cmd_exec
@@ -327,41 +304,41 @@ CfCUw1=Command execution error
 # ●=_mf@128
 D69JIa=Executing
 # ◆=monitor_progress
-# ●=string@166
+# ●=string@167
 ATkIIM=Monitoring process {}...
-# ●=_mf@212
+# ●=_mf@213
 APOzfr=Completed
-# ●=_mf@220
+# ●=_mf@221
 DOkop1=Ctrl+C detected, terminating background subprocesses...
-# ●=string@226
+# ●=string@227
 CWtyq8=Script interrupted and subprocesses cleaned up
 # ◆=pm_refresh
-# ●=string@249
+# ●=string@250
 BeW7RD=Refreshing cache...
-# ●=info@253
+# ●=info@254
 Aq5CFQ=Cache refresh completed
 # ◆=pm_upgrade
-# ●=string@267
+# ●=string@268
 Cq_00C=Updating system...
-# ●=info@271
+# ●=info@272
 D2hEpl=System update completed
 # ◆=pm_install
-# ●=string@288
+# ●=string@289
 BQmsyM=Installing {}...
-# ●=info@292
+# ●=info@293
 DE4sbC=Installation of {} completed
 
 # ■=python/config_sshd.py
 # ◆=run_command
 # ●=string@27
 DWA16R=Failed to execute command: {}
-# ◆=config_sshd
+# ◆=configure_sshd
 # ●=error@97
 D6wN7B=SSH configuration file {} does not exist
 # ●=_mf@110
-DPfimc=Root login allowed
+DqyvG8=root login allowed
 # ●=_mf@110
-BQqoTt=Root login disabled
+DVkFEN=root login disabled
 # ●=string@111
 AZKZT4=Current SSH is running on Port {}, {}
 # ●=_mf@112
@@ -396,7 +373,7 @@ ArhIXB=Backup created
 C_iVzJ=Unable to create backup file
 # ●=exiterr@157
 DPb6VE=Important files cannot be backed up
-# ●=info@159
+# ●=string@159
 A5I7Z3=Backup completed: {} succeeded, {} skipped, {} failed
 # ◆=file_restore_sj
 # ●=exiterr@179
@@ -404,7 +381,7 @@ Ay_Y2v=Backup file {} does not exist, restoration failed
 # ●=_mf@185
 BT_Y36=File restored
 # ◆=write_source_file
-# ●=info@203
+# ●=string@203
 BJsNKb=source file updated: {}
 # ●=_mf@205
 DNbAuh=Write failed
@@ -508,29 +485,33 @@ BwzzIm=Would you like to switch to the new mirror list?
 
 # ■=python/network_util.py
 # ◆=setup_octet
-# ●=string@130
+# ●=string@131
 CPwsn7=The current IP address is invalid
-# ●=_mf@135
+# ●=_mf@136
 CNQ6-k=Please enter the last octet of the static IP address (1–255) [default: {}]: 
-# ●=string@141
+# ●=string@142
 DTArwK=Please enter a number
-# ●=string@146
+# ●=string@147
 BteKhj=The input must be between 1 and 255
-# ●=string@150
+# ●=string@151
 D4k_4H=The static IP address cannot be the same as the gateway
-# ●=string@159
+# ●=string@160
 A2bCmM=\nOperation cancelled
 # ◆=fix_ip
-# ●=info@180
+# ●=info@181
 B41yVK={} Cloud servers do not require a static IP
-# ●=_mf@186
-AJrUNk=A static IP is already configured on the server. Would you like to adjust it?
-# ●=_mf@189
-CbxkLM=Detected that the server is using a dynamic IP. Would you like to change it to a static IP?
+# ●=_mf@188
+CYYp0S=Server is configured with a static IP
 # ●=_mf@191
-DvWz9u=Detected that the server might be using a static IP. Would you like to adjust it?
-# ●=_mf@193
-B657zX=User chose not to modify the network configuration
+D6UA5B=Server may be configured with a static IP
+# ●=_mf@194
+Cp93zR=Server is configured with a dynamic IP
+# ●=string@196
+AzA-3k=Server may be configured with a dynamic IP
+# ●=_mf@198
+CCY-S1=Would you like to adjust it?
+# ●=_mf@199
+C2TtcR=Do not modify the network configuration
 
 # ■=python/system.py
 # ◆=confirm_action
