--- a/config/lang/_lang.yml
+++ b/config/lang/_lang.yml
@@ -9,7 +9,7 @@
 config:
   project: zoomit-2025
   created: 2025/4/25 09:19:01
-  changed: '2025-07-02 10:46:10'
+  changed: '2025-07-04 22:24:03'
   djb2_len: 20
   djb2_coll: FILE # 目前仅在文件内处理hash冲突(暂未启用)
   del_mode: 2 # 0=保留；1=注释；2=删除
@@ -26,15 +26,15 @@ config:
     shell: sh
     python: py
   stats: # auto-generated, DO NOT UPDATE
-    file_nos: 51
-    zh: {count: 227}
-    en: {count: 227}
+    file_nos: 52
+    zh: {count: 231}
+    en: {count: 231}
 file:
   bin/cmd_help.sh:
     type: shell
     djb2_len: 20
     created: '2025-04-30 19:08:34'
-    changed: '2025-07-02 10:46:10'
+    changed: '2025-07-04 22:24:03'
     stats:
       zh: {count: 4, start: 8, end: 15}
       en: {count: 4, start: 8, end: 15}
@@ -42,7 +42,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-30 19:08:34'
-    changed: '2025-07-02 10:46:10'
+    changed: '2025-07-04 22:24:03'
     stats:
       zh: {count: 1, start: 17, end: 19}
       en: {count: 1, start: 17, end: 19}
@@ -50,7 +50,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-29 16:56:55'
-    changed: '2025-07-02 10:46:10'
+    changed: '2025-07-04 22:24:03'
     stats: #  auto-generated, DO NOT UPDATE
       zh: {count: 17, start: 21, end: 51}
       en: {count: 17, start: 21, end: 51}
@@ -58,106 +58,114 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-29 16:56:55'
-    changed: '2025-07-02 10:46:10'
+    changed: '2025-07-04 22:24:03'
     stats: #  auto-generated, DO NOT UPDATE
-      zh: {count: 4, start: 53, end: 59}
-      en: {count: 4, start: 53, end: 59}
+      zh: {count: 5, start: 53, end: 61}
+      en: {count: 5, start: 53, end: 61}
   bin/test_lang.sh:
     type: shell
     djb2_len: 20
     created: '2025-06-23 14:49:57'
-    changed: '2025-07-02 10:46:10'
+    changed: '2025-07-04 22:24:03'
     stats:
-      zh: {count: 7, start: 61, end: 77}
-      en: {count: 7, start: 61, end: 77}
+      zh: {count: 7, start: 63, end: 79}
+      en: {count: 7, start: 63, end: 79}
   lib/bash_utils.sh:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-07-02 10:46:10'
+    changed: '2025-07-04 22:24:03'
     stats:
-      zh: {count: 9, start: 79, end: 91}
-      en: {count: 9, start: 79, end: 91}
+      zh: {count: 2, start: 81, end: 85}
+      en: {count: 2, start: 81, end: 85}
   lib/cmd_handler.sh:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-07-02 10:46:10'
+    changed: '2025-07-04 22:24:03'
     stats:
-      zh: {count: 5, start: 93, end: 100}
-      en: {count: 5, start: 93, end: 100}
+      zh: {count: 6, start: 87, end: 96}
+      en: {count: 6, start: 87, end: 96}
   lib/docker.sh:
     type: shell
     djb2_len: 20
     created: '2025-06-12 18:10:50'
-    changed: '2025-07-02 10:46:10'
+    changed: '2025-07-04 22:24:03'
     stats:
-      zh: {count: 2, start: 102, end: 106}
-      en: {count: 2, start: 102, end: 106}
+      zh: {count: 2, start: 98, end: 102}
+      en: {count: 2, start: 98, end: 102}
   lib/json_handler.sh:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-07-02 10:46:10'
+    changed: '2025-07-04 22:24:03'
     stats:
-      zh: {count: 1, start: 108, end: 110}
-      en: {count: 1, start: 108, end: 110}
-  lib/lang_utils.sh:
-    type: shell
-    djb2_len: 20
-    created: '2025-06-29 20:42:17'
-    changed: '2025-07-02 10:46:10'
-    stats:
-      zh: {count: 4, start: 112, end: 119}
-      en: {count: 4, start: 112, end: 119}
+      zh: {count: 1, start: 104, end: 106}
+      en: {count: 1, start: 104, end: 106}
   lib/network.sh:
     type: shell
     djb2_len: 20
     created: '2025-06-12 18:10:50'
-    changed: '2025-07-02 10:46:10'
+    changed: '2025-07-04 22:24:03'
     stats:
-      zh: {count: 13, start: 121, end: 140}
-      en: {count: 13, start: 121, end: 140}
+      zh: {count: 11, start: 108, end: 123}
+      en: {count: 11, start: 108, end: 123}
+  lib/python_bridge.sh:
+    type: shell
+    djb2_len: 20
+    created: '2025-07-03 15:41:25'
+    changed: '2025-07-04 22:24:03'
+    stats:
+      zh: {count: 1, start: 125, end: 127}
+      en: {count: 1, start: 125, end: 127}
   lib/python_install.sh:
     type: shell
     djb2_len: 20
     created: '2025-06-12 18:10:50'
-    changed: '2025-07-02 10:46:10'
+    changed: '2025-07-04 22:24:03'
     stats:
-      zh: {count: 47, start: 142, end: 202}
-      en: {count: 47, start: 142, end: 202}
+      zh: {count: 48, start: 129, end: 188}
+      en: {count: 48, start: 129, end: 188}
   python/cmd_handler.py:
     type: python
     djb2_len: 20
     created: '2025-06-24 19:02:02'
-    changed: '2025-07-02 10:46:10'
+    changed: '2025-07-04 22:24:03'
     stats:
-      zh: {count: 13, start: 204, end: 223}
-      en: {count: 13, start: 204, end: 223}
+      zh: {count: 13, start: 190, end: 209}
+      en: {count: 13, start: 190, end: 209}
   python/config_sshd.py:
     type: python
     djb2_len: 20
-    created: '2025-06-27 19:16:58'
-    changed: '2025-07-02 10:46:10'
+    created: '2025-07-04 15:10:23'
+    changed: '2025-07-04 22:24:03'
     stats:
-      zh: {count: 11, start: 225, end: 238}
-      en: {count: 11, start: 225, end: 238}
+      zh: {count: 11, start: 211, end: 224}
+      en: {count: 11, start: 211, end: 224}
+  python/configure_sshd.py:
+    type: python
+    djb2_len: 20
+    created: '2025-06-27 19:16:58'
+    changed: '2025-07-04 14:31:12'
+    stats:
+      zh: {count: 11, start: 213, end: 226}
+      en: {count: 11, start: 213, end: 226}
   python/file_util.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 14:40:10'
-    changed: '2025-07-02 10:46:10'
+    changed: '2025-07-04 22:24:03'
     stats:
-      zh: {count: 15, start: 240, end: 260}
-      en: {count: 15, start: 240, end: 260}
+      zh: {count: 15, start: 226, end: 246}
+      en: {count: 15, start: 226, end: 246}
   python/i18n.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 14:40:10'
-    changed: '2025-07-02 10:46:10'
+    changed: '2025-07-04 22:24:03'
     stats:
-      zh: {count: 10, start: 262, end: 278}
-      en: {count: 10, start: 262, end: 278}
+      zh: {count: 10, start: 248, end: 264}
+      en: {count: 10, start: 248, end: 264}
   python/lang_server.py:
     type: python
     djb2_len: 20
@@ -178,39 +186,39 @@ file:
     type: python
     djb2_len: 20
     created: '2025-06-27 11:29:05'
-    changed: '2025-07-02 10:46:10'
+    changed: '2025-07-04 22:24:03'
     stats:
-      zh: {count: 26, start: 280, end: 311}
-      en: {count: 26, start: 280, end: 311}
+      zh: {count: 26, start: 266, end: 297}
+      en: {count: 26, start: 266, end: 297}
   python/mirror/linux_speed_arch.py:
     type: python
     djb2_len: 20
     created: '2025-06-30 23:02:22'
-    changed: '2025-07-02 10:46:10'
+    changed: '2025-07-04 22:24:03'
     stats:
-      zh: {count: 1, start: 313, end: 315}
-      en: {count: 1, start: 313, end: 315}
+      zh: {count: 1, start: 299, end: 301}
+      en: {count: 1, start: 299, end: 301}
   python/network_util.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 18:20:21'
-    changed: '2025-07-02 10:46:10'
+    changed: '2025-07-04 22:24:03'
     stats:
-      zh: {count: 11, start: 317, end: 330}
-      en: {count: 11, start: 317, end: 330}
+      zh: {count: 13, start: 303, end: 318}
+      en: {count: 13, start: 303, end: 318}
   python/system.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 14:40:10'
-    changed: '2025-07-02 10:46:10'
+    changed: '2025-07-04 22:24:03'
     stats:
-      zh: {count: 3, start: 332, end: 336}
-      en: {count: 3, start: 332, end: 336}
+      zh: {count: 3, start: 320, end: 324}
+      en: {count: 3, start: 320, end: 324}
   python/test_lang.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 14:49:57'
-    changed: '2025-07-02 10:46:10'
+    changed: '2025-07-04 22:24:03'
     stats:
-      zh: {count: 2, start: 338, end: 343}
-      en: {count: 2, start: 338, end: 343}
+      zh: {count: 2, start: 326, end: 331}
+      en: {count: 2, start: 326, end: 331}
