install_base_pkg代码重构; cat >"$SWITCH_FILE"分拆逻辑; 补充DEBUG参数

--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -105,15 +105,12 @@ Cb5gv1=⏎ 选择完成，正在保存配置到 .env 文件...
 BzOdCD=JSON format error
 
 # ■=lib/network.sh
-# ◆=count_down
-A_zTdU=Change network in {} seconds: {} (interface {}). Please be ready to reconnect. Press Ctrl+C to cancel
-# ◆=config_nmcli
-AmqOYu=nmcli is not installed or unavailable. Please install it and try again
-# ◆=config_systemd_networkd
-DR9Q62=systemd-networkd is not installed or unavailable
-# ◆=network_config
+# ◆=cat_footer
 DXOXA_=[{}] Network switched. Log: {}
 Co-uGi=[{}] Failed to switch network. Log: {}
+# ◆=count_down
+A_zTdU=Change network in {} seconds: {} (interface {}). Please be ready to reconnect. Press Ctrl+C to cancel
+# ◆=network_config
 C1n7FE=NetworkManager is running (systemctl status NetworkManager)
 DSEEUY=ifupdown is running (systemctl status networking)
 DdVMc5=wicked is running (systemctl status wicked)
