--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -105,15 +105,12 @@ Cb5gv1=⏎ 选择完成，正在保存配置到 .env 文件...
 BzOdCD=JSON format error
 
 # ■=lib/network.sh
-# ◆=count_down
-A_zTdU={}秒后修改网络配置：{} (接口 {})，请准备好重连。按 Ctrl+C 取消
-# ◆=config_nmcli
-AmqOYu=nmcli未安装或不可用，请先安装后再试
-# ◆=config_systemd_networkd
-DR9Q62=systemd-networkd 未安装或不可用
-# ◆=network_config
+# ◆=cat_footer
 DXOXA_=[{}] 网络已切换，日志: {}
 Co-uGi=[{}] 网络切换失败，日志: {}
+# ◆=count_down
+A_zTdU={}秒后修改网络配置：{} (接口 {})，请准备好重连。按 Ctrl+C 取消
+# ◆=network_config
 C1n7FE=NetworkManager 正在运行 (systemctl status NetworkManager)
 DSEEUY=ifupdown 正在运行 (systemctl status networking)
 DdVMc5=wicked 正在运行 (systemctl status wicked)
