confirm_action分拆do_confirm_action(改为/dev/shm临时文件传值); choose_pip_mirror改造为confirm_action; system.sh垃圾代码清理，增加generate_temp_file和destroy_temp_file

--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -78,10 +78,11 @@ C0Yu3-=# {0} 语言包，文档结构：\n\
 Aw3y8l={0} 语言文件已创建
 
 # ■=lib/bash_utils.sh
-# ◆=do_keyboard_interrupt
-Ai7UlQ=operation is cancelled
-# ◆=confirm_action
+# ◆=do_confirm_action
 Cq88WR=Please enter 'y' for yes, 'n' for no, or press Enter for default
+CEddk0=[{}] Invalid input! Please enter a number
+# ◆=confirm_action
+Ai7UlQ=operation is cancelled
 
 # ■=lib/cmd_handler.sh
 # ◆=install_base_pkg
@@ -172,14 +173,16 @@ BrbGjI=Fastest Mirror
 BMhBIw=Response Time
 BclW-G=Failed Mirrors
 AOlJ5P=Status
-# ◆=choose_pip_mirror
-D1ECQh=No available mirrors found. Please check your network connection.
-CIq9J2=Please select a mirror to use. Enter 0 to skip
+# ◆=do_choose_pip_mirror
 Dz9vrd=Configuration canceled. Keeping current settings
 B4r_eA=Pip has been configured to use the new mirror
 AoQOEG=Mirror
 Bovsx6=Trusted Host
+# ◆=choose_pip_mirror
+D1ECQh=No available mirrors found. Please check your network connection.
+CIq9J2=Please select a mirror to use. Enter 0 to skip
 CIsYrg=[{}] Invalid input! Please enter a number between 0 and {}
+BEMgXg=Skipping mirror selection
 # ◆=create_py_venv
 DLX7Eq=Testing global pip mirror speeds...
 
