--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -78,10 +78,11 @@ C0Yu3-=# {0} 语言包，文档结构：\n\
 Aw3y8l={0} 语言文件已创建
 
 # ■=lib/bash_utils.sh
-# ◆=do_keyboard_interrupt
-Ai7UlQ=操作已取消
+# ◆=do_confirm_action
+Cq88WR=请输入 'y' 表示是，'n' 表示否，或者直接按回车使用默认值
+CEddk0=[{}] 输入无效！请输入一个数字
 # ◆=confirm_action
-Cq88WR=Please enter 'y' for yes, 'n' for no, or press Enter for default
+Ai7UlQ=操作已取消
 
 # ■=lib/cmd_handler.sh
 # ◆=install_base_pkg
@@ -172,14 +173,16 @@ BrbGjI=最快镜像
 BMhBIw=响应时间
 BclW-G=失败的镜像
 AOlJ5P=状态
-# ◆=choose_pip_mirror
-D1ECQh=没有找到可用的镜像，请检查网络连接
-CIq9J2=请选择要使用的镜像，输入 0 表示不更改
+# ◆=do_choose_pip_mirror
 Dz9vrd=已取消配置，保持当前设置
 B4r_eA=已配置 pip 使用新的镜像
 AoQOEG=镜像
 Bovsx6=信任主机
+# ◆=choose_pip_mirror
+D1ECQh=没有找到可用的镜像，请检查网络连接
+CIq9J2=请选择要使用的镜像，输入 0 表示不更改
 CIsYrg=[{}] 输入错误！请输入 0-{} 之间的数字
+BEMgXg=跳过镜像选择
 # ◆=create_py_venv
 DLX7Eq=测试全球 pip 可用镜像速度...
 
