py版confirm_action代码完善; choose_mirror、fetch_mirror_list改confirm_action; do_confirm_action分拆action_handler

--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -77,13 +77,6 @@ C0Yu3-=# {0} 语言包，文档结构：\n\
 # 4. value=localized string
 Aw3y8l={0} 语言文件已创建
 
-# ■=lib/bash_utils.sh
-# ◆=do_confirm_action
-Cq88WR=Please enter 'y' for yes, 'n' for no, or press Enter for default
-CEddk0=[{}] Invalid input! Please enter a number
-# ◆=confirm_action
-Ai7UlQ=operation is cancelled
-
 # ■=lib/cmd_handler.sh
 # ◆=install_base_pkg
 DtZJ4v=Automatically installing {} ...
@@ -186,6 +179,13 @@ BEMgXg=Skipping mirror selection
 # ◆=create_py_venv
 DLX7Eq=Testing global pip mirror speeds...
 
+# ■=lib/read_util.sh
+# ◆=action_handler
+Cq88WR=Please enter 'y' for yes, 'n' for no, or press Enter for default
+CEddk0=[{}] Invalid input! Please enter a number
+# ◆=confirm_action
+BRLnrE=Operation cancelled
+
 # ■=python/cmd_handler.py
 # ◆=cmd_exec
 A0d5Uw=Command execution timeout
@@ -271,16 +271,15 @@ CCfiT5=Starting to test {} mirrors, filtering the top {} fastest mirrors, please
 DnXJti=Progress
 AvNok2=Ctrl+C detected, stopping remaining tasks...
 C7KC11=Found top {} fastest {} mirrors (total time: {} seconds)
+# ◆=do_choose_mirror
+DhCuAq=Configuration cancelled, keeping current settings
+Cph1R3=You selected
+C68uzc=Download speed
 # ◆=choose_mirror
 CCGCmP=No available mirrors found
 Dzjmam=Please select a mirror to use (1-{}), enter 0 to keep current settings
 BiFkf4=Please enter your choice (0-{}):
-DhCuAq=Configuration cancelled, keeping current settings
-Cph1R3=You selected
-C68uzc=Download speed
 CvE-z3=Invalid input! Please enter a number between 0-{}
-BjJxaz=Invalid input! Please enter a number
-AxAUpX=Operation canceled
 # ◆=print_results
 AOAev1=Rank
 Ah5sGh=Speed(KB/s)
@@ -299,6 +298,12 @@ AiVn1Y=Would you like to upgrade the packages immediately?
 # ◆=choose_mirror
 BwzzIm=Would you like to switch to the new mirror list?
 
+# ■=python/mirror/linux_speed_ubt.py
+# ◆=valid_fetch_mirror_list
+BlibXk=国家代码 {} 不存在于列表中！请核对 http://mirrors.ubuntu.com/
+# ◆=fetch_mirror_list
+Du2aKD=请选择国家/地区代码 (回车使用默认值 '{}'):
+
 # ■=python/network_util.py
 # ◆=setup_octet
 CPwsn7=The current IP address is invalid
@@ -316,11 +321,14 @@ AzA-3k=Server may be configured with a dynamic IP
 CCY-S1=Would you like to adjust it?
 C2TtcR=Do not modify the network configuration
 
-# ■=python/system.py
+# ■=python/read_util.py
+# ◆=action_handler
+Cq88WR=Please enter 'y' for yes, 'n' for no, or press Enter for default
+CEddk0=[{}] Invalid input! Please enter a number
+# ◆=do_confirm_action
+CeZZbb=Input processing error: {}
 # ◆=confirm_action
 BRLnrE=Operation cancelled
-BuJv_n=Invalid input. Please enter Y or N
-CeZZbb=Input processing error: {}
 
 # ■=python/test_lang.py
 # ◆=show_help_info
