--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -77,13 +77,6 @@ C0Yu3-=# {0} 语言包，文档结构：\n\
 # 4. value=localized string
 Aw3y8l={0} 语言文件已创建
 
-# ■=lib/bash_utils.sh
-# ◆=do_confirm_action
-Cq88WR=请输入 'y' 表示是，'n' 表示否，或者直接按回车使用默认值
-CEddk0=[{}] 输入无效！请输入一个数字
-# ◆=confirm_action
-Ai7UlQ=操作已取消
-
 # ■=lib/cmd_handler.sh
 # ◆=install_base_pkg
 DtZJ4v=自动安装 {}...
@@ -186,6 +179,13 @@ BEMgXg=跳过镜像选择
 # ◆=create_py_venv
 DLX7Eq=测试全球 pip 可用镜像速度...
 
+# ■=lib/read_util.sh
+# ◆=action_handler
+Cq88WR=请输入 'y' 表示是，'n' 表示否，或者直接按回车使用默认值
+CEddk0=[{}] 输入无效！请输入一个数字
+# ◆=confirm_action
+BRLnrE=操作已取消
+
 # ■=python/cmd_handler.py
 # ◆=cmd_exec
 A0d5Uw=命令执行超时
@@ -271,16 +271,15 @@ CCfiT5=开始测试 {} 个镜像，筛选前 {} 个最快镜像，请稍候...
 DnXJti=进度
 AvNok2=检测到 Ctrl+C，停止剩余任务...
 C7KC11=找到前{}个最快的{}镜像 (共耗时{}秒)
+# ◆=do_choose_mirror
+DhCuAq=已取消配置，保持当前设置
+Cph1R3=您选择了
+C68uzc=下载速度
 # ◆=choose_mirror
 CCGCmP=没有找到可用的镜像
 Dzjmam=请选择要使用的镜像 (1-{})，输入 0 表示不更改
 BiFkf4=请输入选择 (0-{}):
-DhCuAq=已取消配置，保持当前设置
-Cph1R3=您选择了
-C68uzc=下载速度
 CvE-z3=无效输入！请输入 0-{} 之间的数字
-BjJxaz=无效输入！请输入一个数字
-AxAUpX=操作已取消
 # ◆=print_results
 AOAev1=排名
 Ah5sGh=速度(KB/s)
@@ -299,6 +298,12 @@ AiVn1Y=是否立刻升级软件包?
 # ◆=choose_mirror
 BwzzIm=是否变更为新的镜像列表?
 
+# ■=python/mirror/linux_speed_ubt.py
+# ◆=valid_fetch_mirror_list
+BlibXk=国家代码 {} 不存在于列表中！请核对 http://mirrors.ubuntu.com/
+# ◆=fetch_mirror_list
+Du2aKD=请选择国家/地区代码 (回车使用默认值 '{}'):
+
 # ■=python/network_util.py
 # ◆=setup_octet
 CPwsn7=当前IP地址无效
@@ -316,11 +321,14 @@ AzA-3k=服务器可能已配置动态IP
 CCY-S1=是否需要调整IP?
 C2TtcR=不修改网络配置
 
-# ■=python/system.py
+# ■=python/read_util.py
+# ◆=action_handler
+Cq88WR=请输入 'y' 表示是，'n' 表示否，或者直接按回车使用默认值
+CEddk0=[{}] 输入无效！请输入一个数字
+# ◆=do_confirm_action
+CeZZbb=输入处理出错: {}
 # ◆=confirm_action
 BRLnrE=操作已取消
-BuJv_n=输入错误，请输入 Y 或 N
-CeZZbb=输入处理出错: {}
 
 # ■=python/test_lang.py
 # ◆=show_help_info
