setup_octet的confirm_action改造

--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -217,9 +217,8 @@ DVkFEN=root login disabled
 AZKZT4=Current SSH is running on Port {}, {}
 BNOqlk=Would you like to reconfigure it?
 DzCitM=Enter new SSH port (current: {}):
-AcZ5l2=SSH port set to
 ARXwDI=Failed to set SSH port
-A2bCmM=\nOperation cancelled
+AcZ5l2=SSH port set to
 D6jDYn=Allow root login via SSH?
 
 # ■=python/file_util.py
@@ -305,13 +304,12 @@ BlibXk=国家代码 {} 不存在于列表中！请核对 http://mirrors.ubuntu.c
 Du2aKD=请选择国家/地区代码 (回车使用默认值 '{}'):
 
 # ■=python/network_util.py
+# ◆=valid_setup_octet
+BteKhj=The input must be between 1 and 255
+D4k_4H=The static IP address cannot be the same as the gateway
 # ◆=setup_octet
 CPwsn7=The current IP address is invalid
 CNQ6-k=Please enter the last octet of the static IP address (1–255) [default: {}]:
-DTArwK=Please enter a number
-BteKhj=The input must be between 1 and 255
-D4k_4H=The static IP address cannot be the same as the gateway
-A2bCmM=\nOperation cancelled
 # ◆=fix_ip
 B41yVK={} Cloud servers do not require a static IP
 CYYp0S=Server is configured with a static IP
