--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -217,9 +217,8 @@ DVkFEN=禁止 root 登录
 AZKZT4=当前 SSH 运行在端口 {}，{}
 BNOqlk=否需要重新配置?
 DzCitM=请输入新的 SSH 端口 (当前: {}):
-AcZ5l2=SSH 端口已设置为
 ARXwDI=设置 SSH 端口失败
-A2bCmM=\n操作已取消
+AcZ5l2=SSH 端口已设置为
 D6jDYn=允许 root 通过 SSH 登录?
 
 # ■=python/file_util.py
@@ -305,13 +304,12 @@ BlibXk=国家代码 {} 不存在于列表中！请核对 http://mirrors.ubuntu.c
 Du2aKD=请选择国家/地区代码 (回车使用默认值 '{}'):
 
 # ■=python/network_util.py
+# ◆=valid_setup_octet
+BteKhj=输入必须在 1~255 之间
+D4k_4H=输入的静态IP地址不能与网关相同
 # ◆=setup_octet
 CPwsn7=当前IP地址无效
 CNQ6-k=请输入静态IP地址的最后一段 (1-255) [默认: {}]:
-DTArwK=请输入数字
-BteKhj=输入必须在 1~255 之间
-D4k_4H=输入的静态IP地址不能与网关相同
-A2bCmM=\n操作已取消
 # ◆=fix_ip
 B41yVK={} 云服务器无需设置固定IP
 CYYp0S=服务器已配置静态IP
