增加INIT_SHELL_LANG_SETUP

--- a/config/lang/.en.properties
+++ b/config/lang/.en.properties
@@ -2,6 +2,7 @@
 # initialize
 INIT_SUDO_RUN="This script must be run with sudo. Re-running with sudo..."
 INIT_SHELL_LANG="Initialize script language (default={}): "
+INIT_SHELL_LANG_SETUP="set LANG to {}"
 INIT_SHELL_LANG_FOMAT_ERROR="Invalid language format. Please re-enter (e.g., en_US | en_US.UTF-8)"
 INIT_SHELL_LANG_NOT_IN_LIST="Not in the locale list. Please re-enter (check [ locale -a ])"
 INIT_SHELL_LANG_CHANGE="Change script language from [{}] to [{}]?"
