--- a/config/lang/.es.properties
+++ b/config/lang/.es.properties
@@ -2,6 +2,7 @@
 # initialize
 INIT_SUDO_RUN="Este script debe ejecutarse con sudo. Volviendo a ejecutarlo con sudo..."
 INIT_SHELL_LANG="Inicializar el idioma del script (predeterminado={}): "
+INIT_SHELL_LANG_SETUP="establecer LANG a {}"
 INIT_SHELL_LANG_FOMAT_ERROR="Formato de idioma no válido. Por favor, inténtalo de nuevo (ej.: es_ES | es_ES.UTF-8)"
 INIT_SHELL_LANG_NOT_IN_LIST="No está en la lista de locales. Por favor, inténtalo de nuevo (verifica con [ locale -a ])"
 INIT_SHELL_LANG_CHANGE="Cambiar el idioma del script de [{}] a [{}]?"
