--- a/config/lang/.ja.properties
+++ b/config/lang/.ja.properties
@@ -2,6 +2,7 @@
 # initialize
 INIT_SUDO_RUN="このスクリプトはsudoで実行する必要があります。sudoで再実行しています..."
 INIT_SHELL_LANG="スクリプト言語を初期化 (デフォルト={}): "
+INIT_SHELL_LANG_SETUP="LANGを{}に設定"
 INIT_SHELL_LANG_FOMAT_ERROR="無効な言語フォーマットです。再入力してください（例：ja_JP | ja_JP.UTF-8）"
 INIT_SHELL_LANG_NOT_IN_LIST="ロケール一覧にありません。再入力してください（[ locale -a ] を確認）"
 INIT_SHELL_LANG_CHANGE="スクリプトの言語を [{}] から [{}] に変更しますか？"
