--- a/config/lang/.zh.properties
+++ b/config/lang/.zh.properties
@@ -2,6 +2,7 @@
 # initialize
 INIT_SUDO_RUN="此脚本必须使用 sudo 运行。正在使用 sudo 重新运行..."
 INIT_SHELL_LANG="初始化脚本语言(默认={}): "
+INIT_SHELL_LANG_SETUP="设置 LANG 为 {}"
 INIT_SHELL_LANG_FOMAT_ERROR="语言格式无效，请重新输入（例如：zh_CN | zh_CN.UTF-8）"
 INIT_SHELL_LANG_NOT_IN_LIST="不在可用语言列表中，请重新输入（请检查 [ locale -a ]）"
 INIT_SHELL_LANG_CHANGE="是否将脚本语言从 [{}] 更改为 [{}]？"
