--- a/config/lang/.de.properties
+++ b/config/lang/.de.properties
@@ -2,6 +2,7 @@
 # initialize
 INIT_SUDO_RUN="Dieses Skript muss mit sudo ausgeführt werden. Erneutes Ausführen mit sudo..."
 INIT_SHELL_LANG="Skriptsprache initialisieren (Standard={}): "
+INIT_SHELL_LANG_SETUP="LANG auf {} setzen"
 INIT_SHELL_LANG_FOMAT_ERROR="Ungültiges Sprachformat. Bitte erneut eingeben (z. B. de_DE | de_DE.UTF-8)"
 INIT_SHELL_LANG_NOT_IN_LIST="Nicht in der Locale-Liste. Bitte erneut eingeben (überprüfen Sie [ locale -a ])"
 INIT_SHELL_LANG_CHANGE="Skript-Sprache von [{}] zu [{}] ändern?"
