--- a/config/lang/.zh_TW.properties
+++ b/config/lang/.zh_TW.properties
@@ -2,6 +2,7 @@
 # initialize
 INIT_SUDO_RUN="此腳本必須使用 sudo 執行。正在使用 sudo 重新執行..."
 INIT_SHELL_LANG="初始化脚本語言(預設={}): "
+INIT_SHELL_LANG_SETUP="設定 LANG 為 {}"
 INIT_SHELL_LANG_FOMAT_ERROR="語言格式無效。請重新輸入（例如：zh_TW | zh_TW.UTF-8）"
 INIT_SHELL_LANG_NOT_IN_LIST="不在可用語言清單中。請重新輸入（請檢查 [ locale -a ]）"
 INIT_SHELL_LANG_CHANGE="將腳本語言從 [{}] 變更為 [{}]？"
