增加MSG_OPER_CANCELLED; 控制符调整(\r\n); trap INT TERM代码梳理

--- a/config/lang/.es.properties
+++ b/config/lang/.es.properties
@@ -9,11 +9,12 @@ INIT_SHELL_LANG_CHANGE="Cambiar el idioma del script de [{}] a [{}]?"
 INIT_SYSTEM_START="Iniciar el sistema"
 INIT_SYSTEM_END="Finalizar el sistema"
 INIT_LINUX_UNSUPPORT="Distribución de Linux no compatible"
-# version claim
-VERSION_CLAIM="{0} - Copyright (C) {1} {2}\n\
-Licenciado bajo GPL v3. Este es un software libre SIN NINGUNA GARANTÍA."
 # msg_handler
 MSG_ERROR="Error"
 MSG_SUCCESS="Éxito"
 MSG_WARNING="Aviso"
 MSG_INFO="Info"
+MSG_OPER_CANCELLED="Operación cancelada"
+# others
+VERSION_CLAIM="{0} - Copyright (C) {1} {2}\n\
+Licenciado bajo GPL v3. Este es un software libre SIN NINGUNA GARANTÍA."
