--- a/config/lang/.fr.properties
+++ b/config/lang/.fr.properties
@@ -9,11 +9,12 @@ INIT_SHELL_LANG_CHANGE="Cambiar el idioma del script de [{}] a [{}]?"
 INIT_SYSTEM_START="Initialiser le démarrage du système"
 INIT_SYSTEM_END="Initialiser la fin du système"
 INIT_LINUX_UNSUPPORT="Distribution Linux non prise en charge"
-# version claim
-VERSION_CLAIM="{0} - Copyright (C) {1} {2}\n\
-Sous licence GPL v3. Ce logiciel est gratuit et sans AUCUNE GARANTIE."
 # msg_handler
 MSG_ERROR="Erreur"
 MSG_SUCCESS="Succès"
 MSG_WARNING="Avert."
 MSG_INFO="Info"
+MSG_OPER_CANCELLED="Opération annulée"
+# others
+VERSION_CLAIM="{0} - Copyright (C) {1} {2}\n\
+Sous licence GPL v3. Ce logiciel est gratuit et sans AUCUNE GARANTIE."
