--- a/config/lang/.zh.properties
+++ b/config/lang/.zh.properties
@@ -3,17 +3,18 @@
 INIT_SUDO_RUN="此脚本必须使用 sudo 运行。正在使用 sudo 重新运行..."
 INIT_SHELL_LANG="初始化脚本语言(默认={}): "
 INIT_SHELL_LANG_SETUP="设置 LANG 为 {}"
-INIT_SHELL_LANG_FOMAT_ERROR="语言格式无效，请重新输入（例如：zh_CN | zh_CN.UTF-8）"
-INIT_SHELL_LANG_NOT_IN_LIST="不在可用语言列表中，请重新输入（请检查 [ locale -a ]）"
-INIT_SHELL_LANG_CHANGE="是否将脚本语言从 [{}] 更改为 [{}]？"
+INIT_SHELL_LANG_FOMAT_ERROR="语言格式无效，请重新输入 (例如：zh_CN | zh_CN.UTF-8)"
+INIT_SHELL_LANG_NOT_IN_LIST="不在可用语言列表中，请重新输入 (请检查 [ locale -a ])"
+INIT_SHELL_LANG_CHANGE="是否将脚本语言从 [{}] 更改为 [{}]?"
 INIT_SYSTEM_START="初始化系统启动"
 INIT_SYSTEM_END="初始化系统结束"
 INIT_LINUX_UNSUPPORT="不支持的Linux发行版"
-# version claim
-VERSION_CLAIM="{0} - 版权所有 (C) {1} {2}\n\
-根据 GPL v3 授权。这是完全没有任何担保的免费软件。"
 # msg_handler
 MSG_ERROR="错误"
 MSG_SUCCESS="成功"
 MSG_WARNING="警告"
 MSG_INFO="信息"
+MSG_OPER_CANCELLED="操作已取消"
+# others
+VERSION_CLAIM="{0} - 版权所有 (C) {1} {2}\n\
+根据 GPL v3 授权。这是完全没有任何担保的免费软件。"
