--- a/config/lang/.zh_TW.properties
+++ b/config/lang/.zh_TW.properties
@@ -3,17 +3,18 @@
 INIT_SUDO_RUN="此腳本必須使用 sudo 執行。正在使用 sudo 重新執行..."
 INIT_SHELL_LANG="初始化脚本語言(預設={}): "
 INIT_SHELL_LANG_SETUP="設定 LANG 為 {}"
-INIT_SHELL_LANG_FOMAT_ERROR="語言格式無效。請重新輸入（例如：zh_TW | zh_TW.UTF-8）"
-INIT_SHELL_LANG_NOT_IN_LIST="不在可用語言清單中。請重新輸入（請檢查 [ locale -a ]）"
-INIT_SHELL_LANG_CHANGE="將腳本語言從 [{}] 變更為 [{}]？"
+INIT_SHELL_LANG_FOMAT_ERROR="語言格式無效。請重新輸入 (例如：zh_TW | zh_TW.UTF-8)"
+INIT_SHELL_LANG_NOT_IN_LIST="不在可用語言清單中。請重新輸入 (請檢查 [ locale -a ])"
+INIT_SHELL_LANG_CHANGE="將腳本語言從 [{}] 變更為 [{}]?"
 INIT_SYSTEM_START="初始化系統啟動"
 INIT_SYSTEM_END="初始化系統結束"
 INIT_LINUX_UNSUPPORT="不支援的Linux發行版"
-# version claim
-VERSION_CLAIM="{0} - 版權所有 (C) {1} {2}\n\
-根據 GPL v3 授權。這是完全沒有任何擔保的免費軟體。"
 # msg_handler
 MSG_ERROR="錯誤"
 MSG_SUCCESS="成功"
 MSG_WARNING="警告"
 MSG_INFO="資訊"
+MSG_OPER_CANCELLED="操作已取消"
+# others
+VERSION_CLAIM="{0} - 版權所有 (C) {1} {2}\n\
+根據 GPL v3 授權。這是完全沒有任何擔保的免費軟體。"
