--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -50,8 +50,6 @@ A1bqoY=语言文件更新完成
 D6sy7g=请输入语言参数，如 --lang={0}
 
 # ■=bin/init_main.sh
-# ◆=initial_global
-DAOaEc=set LANG to {}
 # ◆=configure_sshd
 Dj3cJb=sshd is not installed, installing now...
 BLGrby=SSH configuration has been applied
@@ -174,7 +172,7 @@ Bovsx6=Trusted Host
 # ◆=choose_pip_mirror
 D1ECQh=No available mirrors found. Please check your network connection.
 CIq9J2=Please select a mirror to use. Enter 0 to skip
-CIsYrg=[{}] Invalid input! Please enter a number between 0 and {}
+ClNNly=Invalid input! Please enter a number between 0 and {}
 BEMgXg=Skipping mirror selection
 # ◆=create_py_venv
 DLX7Eq=Testing global pip mirror speeds...
@@ -182,9 +180,7 @@ DLX7Eq=Testing global pip mirror speeds...
 # ■=lib/read_util.sh
 # ◆=action_handler
 Cq88WR=Please enter 'y' for yes, 'n' for no, or press Enter for default
-CEddk0=[{}] Invalid input! Please enter a number
-# ◆=confirm_action
-BRLnrE=Operation cancelled
+BjJxaz=Invalid input! Please enter a number
 
 # ■=python/cmd_handler.py
 # ◆=cmd_exec
@@ -289,7 +285,7 @@ AyPHP9=Mirror URL
 # ◆=run
 Dsnlq3=Could not find the {} source configuration file
 AD12ND=Would you like to reselect a mirror?
-BkZHXM=Current {} mirror
+D6k0Xl=Current {} mirror: {}
 D4jlM5=An error occurred during program execution: {}
 AiVn1Y=Would you like to upgrade the packages immediately?
 
@@ -299,9 +295,9 @@ BwzzIm=Would you like to switch to the new mirror list?
 
 # ■=python/mirror/linux_speed_ubt.py
 # ◆=valid_fetch_mirror_list
-BlibXk=国家代码 {} 不存在于列表中！请核对 http://mirrors.ubuntu.com/
+DONU3t=Country code {} does not exist in the list! Please verify http://mirrors.ubuntu.com/
 # ◆=fetch_mirror_list
-Du2aKD=请选择国家/地区代码 (回车使用默认值 '{}'):
+BQVoKn=Please select a country/region code (press Enter to use the default '{}'):
 
 # ■=python/network_util.py
 # ◆=valid_setup_octet
@@ -322,11 +318,7 @@ C2TtcR=Do not modify the network configuration
 # ■=python/read_util.py
 # ◆=action_handler
 Cq88WR=Please enter 'y' for yes, 'n' for no, or press Enter for default
-CEddk0=[{}] Invalid input! Please enter a number
-# ◆=do_confirm_action
-CeZZbb=Input processing error: {}
-# ◆=confirm_action
-BRLnrE=Operation cancelled
+BjJxaz=Invalid input! Please enter a number
 
 # ■=python/test_lang.py
 # ◆=show_help_info
