--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -50,8 +50,6 @@ A1bqoY=语言文件更新完成
 D6sy7g=请输入语言参数，如 --lang={0}
 
 # ■=bin/init_main.sh
-# ◆=initial_global
-DAOaEc=设置语言为 {}
 # ◆=configure_sshd
 Dj3cJb=sshd 未安装，正在安装...
 BLGrby=SSH 配置已生效
@@ -174,7 +172,7 @@ Bovsx6=信任主机
 # ◆=choose_pip_mirror
 D1ECQh=没有找到可用的镜像，请检查网络连接
 CIq9J2=请选择要使用的镜像，输入 0 表示不更改
-CIsYrg=[{}] 输入错误！请输入 0-{} 之间的数字
+ClNNly=输入错误！请输入 0-{} 之间的数字
 BEMgXg=跳过镜像选择
 # ◆=create_py_venv
 DLX7Eq=测试全球 pip 可用镜像速度...
@@ -182,9 +180,7 @@ DLX7Eq=测试全球 pip 可用镜像速度...
 # ■=lib/read_util.sh
 # ◆=action_handler
 Cq88WR=请输入 'y' 表示是，'n' 表示否，或者直接按回车使用默认值
-CEddk0=[{}] 输入无效！请输入一个数字
-# ◆=confirm_action
-BRLnrE=操作已取消
+BjJxaz=输入无效！请输入一个数字
 
 # ■=python/cmd_handler.py
 # ◆=cmd_exec
@@ -289,7 +285,7 @@ AyPHP9=镜像URL
 # ◆=run
 Dsnlq3=没有找到 {} 源配置文件
 AD12ND=是否重新选择镜像?
-BkZHXM=当前 {} 镜像
+D6k0Xl=当前 {} 镜像: {}
 D4jlM5=程序运行出错: {}
 AiVn1Y=是否立刻升级软件包?
 
@@ -299,10 +295,9 @@ BwzzIm=是否变更为新的镜像列表?
 
 # ■=python/mirror/linux_speed_ubt.py
 # ◆=valid_fetch_mirror_list
-BlibXk=国家代码 {} 不存在于列表中！请核对 http://mirrors.ubuntu.com/
+DONU3t=国家代码 {} 不存在于列表中！请核对 http://mirrors.ubuntu.com/
 # ◆=fetch_mirror_list
-Du2aKD=请选择国家/地区代码 (回车使用默认值 '{}'):
-
+BQVoKn=请选择国家/地区代码 (回车使用默认值 '{}'):
 # ■=python/network_util.py
 # ◆=valid_setup_octet
 BteKhj=输入必须在 1~255 之间
@@ -322,11 +317,7 @@ C2TtcR=不修改网络配置
 # ■=python/read_util.py
 # ◆=action_handler
 Cq88WR=请输入 'y' 表示是，'n' 表示否，或者直接按回车使用默认值
-CEddk0=[{}] 输入无效！请输入一个数字
-# ◆=do_confirm_action
-CeZZbb=输入处理出错: {}
-# ◆=confirm_action
-BRLnrE=操作已取消
+BjJxaz=输入无效！请输入一个数字
 
 # ■=python/test_lang.py
 # ◆=show_help_info
