--- a/config/lang/.de.properties
+++ b/config/lang/.de.properties
@@ -9,11 +9,12 @@ INIT_SHELL_LANG_CHANGE="Skript-Sprache von [{}] zu [{}] ändern?"
 INIT_SYSTEM_START="Systemstart initialisieren"
 INIT_SYSTEM_END="Systemende initialisieren"
 INIT_LINUX_UNSUPPORT="Nicht unterstützte Linux-Distribution"
-# version claim
-VERSION_CLAIM="{0} - Copyright (C) {1} {2}\n\
-Lizenziert unter GPL v3. Dies ist freie Software ohne jegliche Garantie."
 # msg_handler
 MSG_ERROR="Fehler"
 MSG_SUCCESS="Erfolg"
 MSG_WARNING="Warn."
 MSG_INFO="Info"
+MSG_OPER_CANCELLED="Operation cancelled"
+# others
+VERSION_CLAIM="{0} - Copyright (C) {1} {2}\n\
+Lizenziert unter GPL v3. Dies ist freie Software ohne jegliche Garantie."
